--- a/public/privacy.html
+++ b/public/privacy.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gizlilik Politikası – StreamShield</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <section class="about">
-    <div class="container">
-      <h2>Gizlilik Politikası</h2>
-      <p>StreamShield kullanıcı gizliliğini önemser. Aşağıda, hangi bilgilerin nasıl işlendiği açıklanmıştır.</p>
-      <h4>Toplanan Bilgiler</h4>
-      <p>Kişisel veriler toplanmaz. Tüm işlemler tarayıcınızda yerel olarak gerçekleşir.</p>
-      <h4>Çerezler</h4>
-      <p>StreamShield hiçbir çerez kullanmaz.</p>
-      <h4>Üçüncü Taraf Bağlantılar</h4>
-      <p>GitHub gibi dış bağlantılar için ilgili sitelerin politikaları geçerlidir.</p>
-      <h4>İletişim</h4>
-      <p>destek için: <a href="mailto:destek@streamshield.local">destek@streamshield.local</a></p>
-      <a href="index.html" class="btn">Ana Sayfa</a>
+  <section class="privacy-section">
+    <div class="privacy-container">
+      <h2 class="privacy-title">🔐 Gizlilik Politikası</h2>
+      <p class="privacy-text">StreamShield kullanıcı gizliliğini önemser. Aşağıda, hangi bilgilerin nasıl işlendiği açıklanmıştır.</p>
+
+      <div class="privacy-card">
+        <h4>📁 Toplanan Bilgiler</h4>
+        <p>Kişisel veriler toplanmaz. Tüm işlemler tarayıcınızda yerel olarak gerçekleşir.</p>
+      </div>
+
+      <div class="privacy-card">
+        <h4>🍪 Çerezler</h4>
+        <p>StreamShield hiçbir çerez kullanmaz.</p>
+      </div>
+
+      <div class="privacy-card">
+        <h4>🔗 Üçüncü Taraf Bağlantılar</h4>
+        <p>GitHub gibi dış bağlantılar için ilgili sitelerin politikaları geçerlidir.</p>
+      </div>
+
+      <div class="privacy-card">
+        <h4>📬 İletişim</h4>
+        <p>Herhangi bir soru için: <a href="mailto:destek@streamshield.local">destek@streamshield.local</a></p>
+      </div>
+
+      <a href="index.html" class="btn-back">← Ana Sayfa</a>
     </div>
   </section>
 </body>
