--- a/public/privacy.html
+++ b/public/privacy.html
@@ -2,38 +2,48 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gizlilik Politikası – StreamShield</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="container">
+      <h1 class="logo">StreamShield</h1>
+      <nav class="nav">
+        <a href="index.html">Ana Sayfa</a>
+        <a href="privacy.html" class="active">Gizlilik</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- GİZLİLİK POLİTİKASI -->
   <section class="privacy-section">
-    <div class="privacy-container">
-      <h2 class="privacy-title">🔐 Gizlilik Politikası</h2>
-      <p class="privacy-text">StreamShield kullanıcı gizliliğini önemser. Aşağıda, hangi bilgilerin nasıl işlendiği açıklanmıştır.</p>
+    <div class="container">
+      <h2>🔐 Gizlilik Politikası</h2>
+      <p>StreamShield, kullanıcı gizliliğini en üst düzeyde korumayı ilke edinmiştir. Bu belge, hangi verilerin toplandığını, nasıl saklandığını ve kullanıcı haklarını açıklar.</p>
 
-      <div class="privacy-card">
-        <h4>📁 Toplanan Bilgiler</h4>
-        <p>Kişisel veriler toplanmaz. Tüm işlemler tarayıcınızda yerel olarak gerçekleşir.</p>
-      </div>
+      <h3>📁 Toplanan Bilgiler</h3>
+      <p>StreamShield, hiçbir kişisel veri toplamaz. Uzantımızın tüm işlevleri cihazınızda yerel olarak çalışır ve üçüncü taraf sunucularla bilgi paylaşımı yapılmaz.</p>
+      <p>Toplanan veriler yalnızca anonim analizler için, cihazda yerel olarak ve kullanıcıya özel tutulur.</p>
 
-      <div class="privacy-card">
-        <h4>🍪 Çerezler</h4>
-        <p>StreamShield hiçbir çerez kullanmaz.</p>
-      </div>
+      <h3>🍪 Çerez Politikası</h3>
+      <p>StreamShield, herhangi bir çerez (cookie) kullanmaz. Kullanıcı takibi yapılmaz ve reklam profili oluşturulmaz.</p>
 
-      <div class="privacy-card">
-        <h4>🔗 Üçüncü Taraf Bağlantılar</h4>
-        <p>GitHub gibi dış bağlantılar için ilgili sitelerin politikaları geçerlidir.</p>
-      </div>
+      <h3>🔗 Üçüncü Taraf Bağlantılar</h3>
+      <p>StreamShield, GitHub ve Chrome Web Mağazası gibi üçüncü taraf hizmetlere bağlantı sağlayabilir. Bu sitelerin gizlilik politikalarından StreamShield sorumlu değildir. Ziyaret ettiğiniz her üçüncü taraf sitesinin kendi politikasını gözden geçirmenizi tavsiye ederiz.</p>
 
-      <div class="privacy-card">
-        <h4>📬 İletişim</h4>
-        <p>Herhangi bir soru için: <a href="mailto:destek@streamshield.local">destek@streamshield.local</a></p>
-      </div>
+      <h3>🔒 Güvenlik</h3>
+      <p>Uzantımız, kullanıcı verilerinin güvenliğini korumak adına hiçbir harici veri depolama veya izleme mekanizması kullanmaz. Tüm işlemler güvenli ve şeffaf şekilde gerçekleştirilir.</p>
+
+      <h3>📬 İletişim</h3>
+      <p>Gizlilik politikamız hakkında daha fazla bilgi almak veya herhangi bir konuda yardım istemek için bize <a href="mailto:destek@streamshield.local">destek@streamshield.local</a> adresinden ulaşabilirsiniz.</p>
 
       <a href="index.html" class="btn-back">← Ana Sayfa</a>
     </div>
   </section>
+
 </body>
 </html>
