--- a/public/index.html
+++ b/public/index.html
@@ -159,22 +159,23 @@
     </div>
   </div>
 
-  <!-- FOOTER -->
-  <footer id="contact" class="footer">
-    <div class="container footer-grid">
-      <div>
-        <h3>İletişim</h3>
-        <p><a href="mailto:destek@streamshield.local">destek@streamshield.local</a></p>
-      </div>
-      <div>
-        <h3>Sosyal</h3>
-        <p><a href="#">Twitter</a> | <a href="#">GitHub</a></p>
-      </div>
-      <div>
-        <h3>© 2025 StreamShield</h3>
-      </div>
+<!-- FOOTER -->
+<footer id="contact" class="footer">
+  <div class="container footer-grid">
+    <div>
+      <h3>İletişim</h3>
+      <p><a href="mailto:destek@streamshield.local">destek@streamshield.local</a></p>
     </div>
-  </footer>
+    <div>
+      <h3>Sosyal</h3>
+      <p><a href="#">Twitter</a> | <a href="#">GitHub</a></p>
+    </div>
+    <div style="text-align: center;">
+      <h3>© 2025 StreamShield</h3>
+      <p><a href="privacy.html" class="footer-privacy-link">Gizlilik Politikası</a></p>
+    </div>
+  </div>
+</footer>
 
   <!-- GİZLİLİK POLİTİKASI EN ALTTA -->
   <div class="privacy-bottom">
