--- a/public/privacy.html
+++ b/public/privacy.html
@@ -2,44 +2,59 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gizlilik Politikası – StreamShield</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="site-header">
+  <!-- NAVBAR -->
+  <nav class="navbar">
     <div class="container">
-      <h1 class="logo">StreamShield</h1>
-      <nav class="nav">
-        <a href="index.html">Ana Sayfa</a>
-        <a href="privacy.html" class="active">Gizlilik</a>
-      </nav>
+      <a href="index.html" class="logo">
+        <img src="icons/streamshield-icon.svg" class="logo-img" alt="Logo" />
+        <span class="logo-text">StreamShield</span>
+      </a>
+      <ul class="menu">
+        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html#features">Özellikler</a></li>
+        <li><a href="index.html#how">Nasıl Çalışır?</a></li>
+        <li><a href="index.html#download">İndir</a></li>
+        <li><a href="index.html#contact">İletişim</a></li>
+      </ul>
     </div>
-  </header>
+  </nav>
 
   <!-- GİZLİLİK POLİTİKASI -->
-  <section class="privacy-section">
+  <section class="privacy-page">
     <div class="container">
       <h2>🔐 Gizlilik Politikası</h2>
-      <p>StreamShield, kullanıcı gizliliğini en üst düzeyde korumayı ilke edinmiştir. Bu belge, hangi verilerin toplandığını, nasıl saklandığını ve kullanıcı haklarını açıklar.</p>
+      <p>StreamShield, kullanıcı gizliliğini en üst düzeyde korumayı taahhüt eder. Bu sayfa, hangi verilerin toplandığını, nasıl saklandığını ve kullanıcı haklarını açıklar.</p>
 
-      <h3>📁 Toplanan Bilgiler</h3>
-      <p>StreamShield, hiçbir kişisel veri toplamaz. Uzantımızın tüm işlevleri cihazınızda yerel olarak çalışır ve üçüncü taraf sunucularla bilgi paylaşımı yapılmaz.</p>
-      <p>Toplanan veriler yalnızca anonim analizler için, cihazda yerel olarak ve kullanıcıya özel tutulur.</p>
+      <div class="privacy-section">
+        <h3>📁 Toplanan Bilgiler</h3>
+        <p>StreamShield kişisel verilerinizi toplamaz. Tüm işlemler tarayıcınızda yerel olarak çalışır ve hiçbir veri dış kaynaklara gönderilmez.</p>
+      </div>
 
-      <h3>🍪 Çerez Politikası</h3>
-      <p>StreamShield, herhangi bir çerez (cookie) kullanmaz. Kullanıcı takibi yapılmaz ve reklam profili oluşturulmaz.</p>
+      <div class="privacy-section">
+        <h3>🍪 Çerez Kullanımı</h3>
+        <p>Platform hiçbir şekilde çerez (cookie) kullanmaz. Kullanıcı takibi yapılmaz ve reklam profili oluşturulmaz.</p>
+      </div>
 
-      <h3>🔗 Üçüncü Taraf Bağlantılar</h3>
-      <p>StreamShield, GitHub ve Chrome Web Mağazası gibi üçüncü taraf hizmetlere bağlantı sağlayabilir. Bu sitelerin gizlilik politikalarından StreamShield sorumlu değildir. Ziyaret ettiğiniz her üçüncü taraf sitesinin kendi politikasını gözden geçirmenizi tavsiye ederiz.</p>
+      <div class="privacy-section">
+        <h3>🔗 Üçüncü Taraf Bağlantılar</h3>
+        <p>GitHub ve Chrome Web Mağazası gibi üçüncü taraf bağlantılar içerir. Bu sitelerin politikaları StreamShield’i bağlamaz.</p>
+      </div>
 
-      <h3>🔒 Güvenlik</h3>
-      <p>Uzantımız, kullanıcı verilerinin güvenliğini korumak adına hiçbir harici veri depolama veya izleme mekanizması kullanmaz. Tüm işlemler güvenli ve şeffaf şekilde gerçekleştirilir.</p>
+      <div class="privacy-section">
+        <h3>🔒 Güvenlik</h3>
+        <p>Verileriniz tamamen cihazınızda kalır. Uzantı dış sunucularla iletişim kurmaz. Maksimum gizlilik prensibi benimsenmiştir.</p>
+      </div>
 
-      <h3>📬 İletişim</h3>
-      <p>Gizlilik politikamız hakkında daha fazla bilgi almak veya herhangi bir konuda yardım istemek için bize <a href="mailto:destek@streamshield.local">destek@streamshield.local</a> adresinden ulaşabilirsiniz.</p>
+      <div class="privacy-section">
+        <h3>📬 İletişim</h3>
+        <p>Her türlü soru ve destek için <a href="mailto:destek@streamshield.local">destek@streamshield.local</a> adresine ulaşabilirsiniz.</p>
+      </div>
 
       <a href="index.html" class="btn-back">← Ana Sayfa</a>
     </div>
