--- a/public/privacy.html
+++ b/public/privacy.html
@@ -42,31 +42,33 @@
   <section class="privacy-page">
     <div class="container">
       <h2>🔐 Gizlilik Politikası</h2>
-      <p>StreamShield, kullanıcı gizliliğini en üst düzeyde korumayı taahhüt eder. Bu sayfa, hangi verilerin toplandığını, nasıl saklandığını ve kullanıcı haklarını açıklar.</p>
+      <p>StreamShield olarak kullanıcılarımızın gizliliğine son derece önem veriyoruz. Bu gizlilik politikası, hangi bilgileri topladığımızı, bu bilgileri nasıl kullandığımızı ve kullanıcı haklarını kapsamlı bir şekilde açıklar. Bu belgeyi dikkatlice okumanız, size daha güvenli bir kullanım deneyimi sağlayacaktır.</p>
 
       <div class="privacy-section">
         <h3>📁 Toplanan Bilgiler</h3>
-        <p>StreamShield kişisel verilerinizi toplamaz. Tüm işlemler tarayıcınızda yerel olarak çalışır ve hiçbir veri dış kaynaklara gönderilmez.</p>
+        <p>StreamShield uzantısı, kullanıcıdan hiçbir kişisel veri toplamaz. Uygulama yalnızca tarayıcı üzerinde çalışır ve herhangi bir sunucuya bilgi iletimi yapılmaz. Giriş, kayıt veya e-posta gibi kullanıcı bilgileri talep edilmez.</p>
+        <p>Kullanım sırasında bazı istatistikler (örneğin kaç reklam engellendiği) yalnızca yerel olarak, sizin tarayıcınızda saklanır. Bu bilgiler uygulamanın performansını artırmak veya raporlama yapmak amacıyla dışa aktarılmaz.</p>
       </div>
 
       <div class="privacy-section">
-        <h3>🍪 Çerez Kullanımı</h3>
-        <p>Platform hiçbir şekilde çerez (cookie) kullanmaz. Kullanıcı takibi yapılmaz ve reklam profili oluşturulmaz.</p>
+        <h3>🍪 Çerez (Cookie) Kullanımı</h3>
+        <p>StreamShield çerez kullanmaz. Kullanıcı etkinliklerini izlemek, reklam profili oluşturmak veya site davranışı analiz etmek gibi amaçlarla herhangi bir çerez teknolojisinden faydalanılmaz. Tarayıcı geçmişiniz, çerez verileriniz veya çevrimiçi davranışlarınız uygulama tarafından izlenmez ve saklanmaz.</p>
       </div>
 
       <div class="privacy-section">
         <h3>🔗 Üçüncü Taraf Bağlantılar</h3>
-        <p>GitHub ve Chrome Web Mağazası gibi üçüncü taraf bağlantılar içerir. Bu sitelerin politikaları StreamShield’i bağlamaz.</p>
+        <p>StreamShield, GitHub ve Chrome Web Mağazası gibi üçüncü taraf platformlara bağlantılar sunabilir. Bu platformlara yönlendirildiğinizde, bu sitelerin kendi gizlilik politikaları geçerli olur. StreamShield, bu sitelerdeki veri toplama ve işleme faaliyetlerinden sorumlu değildir. Bu nedenle, her üçüncü taraf siteye girmeden önce ilgili gizlilik politikalarını okumanız tavsiye edilir.</p>
       </div>
 
       <div class="privacy-section">
-        <h3>🔒 Güvenlik</h3>
-        <p>Verileriniz tamamen cihazınızda kalır. Uzantı dış sunucularla iletişim kurmaz. Maksimum gizlilik prensibi benimsenmiştir.</p>
+        <h3>🔒 Güvenlik Önlemleri</h3>
+        <p>StreamShield, dış sunucu kullanmaması sayesinde doğal bir veri güvenliği sunar. Uygulamanın tamamı tarayıcı üzerinde çalıştığından, verilerinizin aktarımı veya sızması gibi bir risk bulunmaz. Kodlarımız tamamen açık kaynaklıdır ve dileyen herkes tarafından denetlenebilir. Bu şeffaflık, güvenliğe verdiğimiz önemin en büyük göstergesidir.</p>
       </div>
 
       <div class="privacy-section">
-        <h3>📬 İletişim</h3>
-        <p>Her türlü soru ve destek için <a href="mailto:destek@streamshield.local">destek@streamshield.local</a> adresine ulaşabilirsiniz.</p>
+        <h3>📬 İletişim ve Geri Bildirim</h3>
+        <p>Gizlilik politikamız hakkında sorularınız varsa, ya da uygulamayla ilgili öneri ve geri bildirimde bulunmak isterseniz bizimle iletişime geçebilirsiniz. Size destek vermekten memnuniyet duyarız.</p>
+        <p>İletişim e-posta adresimiz: <a href="mailto:destek@streamshield.local">destek@streamshield.local</a></p>
       </div>
 
       <a href="index.html" class="btn-back">← Ana Sayfa</a>
