--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,7 @@
     <div style="text-align: center;">
       <h3>© 2025 StreamShield</h3>
       <p><a href="privacy.html" class="footer-privacy-link">Gizlilik Politikası</a></p>
+      <p><a href="kvkk.html" class="footer-kvkk-link">KVKK Aydınlatma Metni</a></p>
     </div>
   </div>
 </footer>
