--- a/public/kvkk.html
+++ b/public/kvkk.html
@@ -1,52 +1,49 @@
-<!-- kvkk.html -->
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KVKK Aydınlatma Metni</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>KVKK Aydınlatma Metni – StreamShield</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div class="container">
-    <h1>KVKK Aydınlatma Metni</h1>
-    <p>
-      6698 sayılı Kişisel Verilerin Korunması Kanunu (“KVKK”) uyarınca, StreamShield olarak kişisel verilerinizi 
-      mevzuata uygun şekilde toplamakta, işlemekte ve korumaktayız. Bu metin, hangi verileri neden topladığımızı 
-      ve nasıl koruduğumuzu açıklamak amacıyla hazırlanmıştır.
-    </p>
+  <div class="kvkk-page">
+    <div class="container">
+      <h1>KVKK Aydınlatma Metni</h1>
+      <p>
+        6698 sayılı Kişisel Verilerin Korunması Kanunu (“KVKK”) uyarınca, StreamShield olarak kişisel verilerinizi 
+        mevzuata uygun şekilde toplamakta, işlemekte ve korumaktayız. Bu metin, hangi verileri neden topladığımızı 
+        ve nasıl koruduğumuzu açıklamak amacıyla hazırlanmıştır.
+      </p>
 
-    <h2>1. Veri Sorumlusu</h2>
-    <p>Veri Sorumlusu: StreamShield</p>
+      <h2>1. Veri Sorumlusu</h2>
+      <p><strong>Veri Sorumlusu:</strong> StreamShield</p>
 
-    <h2>2. Toplanan Kişisel Veriler</h2>
-    <ul>
-      <li>İsim, e-posta adresi (geri bildirim formları yoluyla)</li>
-      <li>Kullanıcı davranış verileri (isteğe bağlı olarak)</li>
-    </ul>
+      <h2>2. Toplanan Kişisel Veriler</h2>
+      <ul>
+        <li>İsim, e-posta adresi (geri bildirim formları yoluyla)</li>
+        <li>Kullanıcı davranış verileri (isteğe bağlı)</li>
+      </ul>
 
-    <h2>3. İşleme Amaçları</h2>
-    <p>
-      Kişisel verileriniz yalnızca aşağıdaki amaçlarla işlenebilir:
-    </p>
-    <ul>
-      <li>Geri bildirimlerin değerlendirilmesi</li>
-      <li>Destek taleplerinin cevaplanması</li>
-      <li>Hizmet kalitesinin artırılması</li>
-    </ul>
+      <h2>3. İşleme Amaçları</h2>
+      <ul>
+        <li>Geri bildirimlerin değerlendirilmesi</li>
+        <li>Destek taleplerinin yanıtlanması</li>
+        <li>Hizmet kalitesinin artırılması</li>
+      </ul>
 
-    <h2>4. Haklarınız</h2>
-    <p>KVKK kapsamında, aşağıdaki haklara sahipsiniz:</p>
-    <ul>
-      <li>Veri işlenip işlenmediğini öğrenme</li>
-      <li>İşlenmişse bilgi talep etme</li>
-      <li>Hatalı ya da eksik işlenmişse düzeltilmesini isteme</li>
-      <li>İlgili yasal şartlar altında silinmesini veya yok edilmesini isteme</li>
-    </ul>
+      <h2>4. Haklarınız</h2>
+      <ul>
+        <li>Kişisel verilerin işlenip işlenmediğini öğrenme</li>
+        <li>İşlenmişse bilgi talep etme</li>
+        <li>Düzeltme talep etme</li>
+        <li>Silinmesini/yok edilmesini isteme</li>
+      </ul>
 
-    <p>KVKK kapsamındaki tüm taleplerinizi <a href="mailto:destek@streamshield.local">destek@streamshield.local</a> adresine iletebilirsiniz.</p>
+      <p>KVKK kapsamındaki talepleriniz için: <a href="mailto:destek@streamshield.local">destek@streamshield.local</a></p>
 
-    <a href="index.html" class="btn">Ana Sayfa</a>
+      <a href="index.html" class="btn outline">Ana Sayfa</a>
+    </div>
   </div>
 </body>
 </html>
